[gd_scene load_steps=8 format=3 uid="uid://bsblupcpeqoqf"]

[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="1_ix5wn"]
[ext_resource type="PackedScene" uid="uid://kf003ypspfyk" path="res://scenes/ui/order_box.tscn" id="2_vlgni"]
[ext_resource type="PackedScene" uid="uid://bosls3x6g4ud" path="res://scenes/ui/food_box.tscn" id="3_c6i4w"]
[ext_resource type="PackedScene" uid="uid://dtutr15p1mfw8" path="res://scenes/ui/inventory_box.tscn" id="4_8h13l"]
[ext_resource type="PackedScene" uid="uid://v16nig8y0ape" path="res://scenes/ui/placeable_box.tscn" id="5_gym5i"]
[ext_resource type="PackedScene" uid="uid://bocsrfn0m3emm" path="res://scenes/ui/tile_popup.tscn" id="6_75xix"]
[ext_resource type="PackedScene" uid="uid://btghtkerya6ao" path="res://scenes/ui/message_area.tscn" id="6_yg2mc"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ix5wn")

[node name="OrderBox" parent="." instance=ExtResource("2_vlgni")]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0

[node name="FoodBox" parent="." instance=ExtResource("3_c6i4w")]
layout_mode = 0
offset_left = 25.0
offset_top = 300.0
offset_right = 231.0
offset_bottom = 600.0

[node name="InventoryBox" parent="." instance=ExtResource("4_8h13l")]
layout_mode = 0
offset_left = 25.0
offset_top = 600.0
offset_right = 231.0
offset_bottom = 900.0

[node name="PlaceableBox" parent="." instance=ExtResource("5_gym5i")]
layout_mode = 0
offset_left = 1344.0
offset_top = 300.0
offset_right = 1575.0
offset_bottom = 600.0

[node name="MessageArea" parent="." instance=ExtResource("6_yg2mc")]
offset_left = 256.0
offset_top = 620.0
offset_right = 1344.0
offset_bottom = 900.0

[node name="TilePopup" parent="." instance=ExtResource("6_75xix")]
visible = false

[connection signal="submit_order" from="OrderBox" to="." method="_on_order_box_submit_order"]
